--- a/protecyoFinal/protecyoFinal.cbp
+++ b/protecyoFinal/protecyoFinal.cbp
@@ -31,6 +31,21 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Inventario.h" />
+		<Unit filename="Jogador.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Jogador.h" />
+		<Unit filename="Mobs.h" />
+		<Unit filename="Nodo.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Nodo.h" />
+		<Unit filename="NodoArbol.h" />
+		<Unit filename="Objetos.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Objetos.h" />
 		<Unit filename="libreriaNueva.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -38,10 +53,6 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
-		</Extensions>
+		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
