--- a/protecyoFinal/protecyoFinal.cbp
+++ b/protecyoFinal/protecyoFinal.cbp
@@ -31,6 +31,11 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Codito2.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Codito2.h" />
+		<Unit filename="Objeto.h" />
 		<Unit filename="arbol.c">
 			<Option compilerVar="CC" />
 		</Unit>
