--- a/JuegoRPG-C--main/protecyoFinal/protecyoFinal.cbp
+++ b/JuegoRPG-C--main/protecyoFinal/protecyoFinal.cbp
@@ -35,6 +35,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="Codito2.h" />
+		<Unit filename="Filas.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Filas.h" />
 		<Unit filename="Inventario.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -58,10 +62,6 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="mapa.h" />
-		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
-		</Extensions>
+		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
